# calotypes

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  calotypesConfig.cmake.in  calotypesConfigVersion.cmake.in  output.txt  test_config.yaml
app/: CMakeLists.txt  HoldoutCalibration.cpp  ProcessImages.cpp  ShuffleLog.cpp  SimpleCalibration.cpp  ThreadedCalibration.cpp
include/calotypes/: CalibrationLog.h  CameraCalibration.h  CrossValidation.hpp  DataSelector.hpp  DatasetFunctions.hpp  DatasetMetrics.hpp  GreedyDataSelector.hpp  ImportanceResampling.hpp  KernelDensityEstimation.hpp  KernelFunctions.hpp  PlanarGridStructure.h  PointStructure.h  ProbabilityDensity.hpp  RandomDataSelector.hpp  ReprojectionEvaluation.h  Semaphore.h  Shufflers.hpp  SubsampleDataSelector.hpp  SubsetSamplers.hpp  WeightedSamplers.hpp  WorkerPool.h  WorkerPool.hpp
matlab/: CalculateDataOverlap.m  ParseCalibrationResult.m  PlotResults.m  ProcessResults.m  cellgram.m  coverlap.m
scripts/: generate_results.sh
src/: CMakeLists.txt  CalibrationLog.cpp  CameraCalibration.cpp  ReprojectionEvaluation.cpp
